--- a/src/static/style.css
+++ b/src/static/style.css
@@ -11,28 +11,44 @@
     --shade_4: #0c1311;
 }
 body {
-    background-color: var(--shade_4);
+    background-color: rgb(94, 111, 220);
   }
+.header {
+    background-color: rgb(243, 8, 8);
+    height: 70px;
+    border:hsl(19, 16%, 77%) solid 3px;
+    border-radius: 12px;
+}
 html{
     font-family: Arial;
     color: beige;
     display:inline-block;
     margin: 0px auto;
     }
-h1, h2, h3, h4{color: var(--green);}
+h1, h2, h3, h4{color: white;}
+a {
+    color: white;
+}
 input, textarea {
     background-color: var(--beige);
   }
+
+img {
+    border: solid white 3px;
+    border-radius: 10px;
+}
 .button{
     display: inline-block;
-    background-color: #e7bd3b;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    padding: 16px 40px;
+    background-color: white;
+    border: solid 2px rgb(0, 0, 0);
+    border-radius: 10px;
+    color: red;
+    padding: 11px 25px;
     text-decoration: none;
+    vertical-align: middle;
     font-size: 30px;
     margin: 2px;
+    margin-top: 4px;
     cursor: pointer;
     }
 .sm_button {
@@ -41,7 +57,7 @@ input, textarea {
     border: none;
     border-radius: 2px;
     color: white;
-    padding: 8px 20px;
+    padding: 5px 15px;
     text-decoration: none;
     font-size: 15px;
     margin: 2px;
