--- a/src/static/home/assets/sass/main.scss
+++ b/src/static/home/assets/sass/main.scss
@@ -717,7 +717,7 @@
 
 	#header {
 		position: relative;
-		background-image: url('../../images/hero.png');
+		background-image: url('../../images/hero.jpg');
 		background-size: cover;
 		background-position: center center;
 		background-attachment: fixed;
