--- a/src/static/home/assets/css/main.css
+++ b/src/static/home/assets/css/main.css
@@ -2968,7 +2968,7 @@ input, select, textarea {
 					top: 0;
 					width: 100%;
 					height: 100%;
-					background: url("images/overlay.png");
+					background: url("static/pics/Screenshot_20241115-205819.png");
 					background-size: 128px 128px;
 				}
 
