--- a/src/static/home/assets/sass/main.scss
+++ b/src/static/home/assets/sass/main.scss
@@ -1480,7 +1480,7 @@
 					top: 0;
 					width: 100%;
 					height: 100%;
-					background: url('images/overlay.png');
+					background: url('static/pics/Screenshot_20241115-205819.png');
 					background-size: 128px 128px;
 				}
 
